<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/stopwatch"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:textColor="#00ACC1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textTimer"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/btnstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="#FFB300"
            android:onClick="onclickstart"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/btnstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:backgroundTint="#E81A15"
            android:layout_marginStart="35dp"
            android:onClick="onclickstop"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/btnreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:backgroundTint="#43A047"
            android:layout_marginStart="35sp"
            android:onClick="onclickreset"

            style="?android:attr/buttonBarButtonStyle"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="385dp"
        android:layout_height="46dp"
        android:layout_marginStart="17sp"
        android:layout_marginEnd="15sp"
        android:text="@string/now_our_stopwatch_is_ready_you_can_start_stop_and_reset_the_watch"
        android:textColor="#E65B58"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="380dp"
        android:layout_height="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        app:srcCompat="@android:drawable/button_onoff_indicator_off"
        android:contentDescription="@string/todo"
        />


</androidx.constraintlayout.widget.ConstraintLayout>